crates/syntax/src/parser/snapshots/hebi_syntax__parser__tests__class_self_and_super-3.snap
---
source: crates/syntax/src/parser/tests.rs
expression: errors
---
[31merror[0m: cannot access `self` outside of class method
[34m>[0m code:2
[34m|[0m 
[34m|[0m   v = [31;4mself[0m.f()
[34m|[0m 


