crates/syntax/src/parser/snapshots/hebi_syntax__parser__tests__class_self_and_super-9.snap
---
source: crates/syntax/src/parser/tests.rs
expression: errors
---
[31merror[0m: cannot access `super` in a class with no parent class
[34m>[0m code:2
[34m|[0m 
[34m|[0m   v = [31;4msuper[0m
[34m|[0m 


