crates/syntax/src/parser/snapshots/hebi_syntax__parser__tests__class_stmt-6.snap
---
source: crates/syntax/src/parser/tests.rs
expression: errors
---
[31merror[0m: invalid indentation
[34m>[0m code:2
[34m|[0m 
[34m|[0m   [31;4m([0mU): pass
[34m|[0m 


