crates/syntax/src/parser/snapshots/hebi_syntax__parser__tests__class_stmt.snap
---
source: crates/syntax/src/parser/tests.rs
expression: module
---
Module {
    body: [
        Class(
            Class {
                name: "T",
                parent: None,
                members: ClassMembers {
                    fields: [],
                    methods: [],
                    meta: [],
                },
            },
        ),
        Class(
            Class {
                name: "T",
                parent: None,
                members: ClassMembers {
                    fields: [],
                    methods: [],
                    meta: [],
                },
            },
        ),
        Class(
            Class {
                name: "T",
                parent: None,
                members: ClassMembers {
                    fields: [],
                    methods: [
                        Func {
                            name: "f",
                            params: Params {
                                has_self: false,
                                pos: [
                                    (
                                        "v",
                                        None,
                                    ),
                                ],
                                argv: None,
                                kw: [],
                                kwargs: None,
                            },
                            body: [
                                Pass,
                            ],
                            has_yield: false,
                        },
                    ],
                    meta: [],
                },
            },
        ),
        Class(
            Class {
                name: "T",
                parent: None,
                members: ClassMembers {
                    fields: [
                        Field {
                            name: "a",
                            default: Some(
                                GetVar(
                                    GetVar {
                                        name: "b",
                                    },
                                ),
                            ),
                        },
                    ],
                    methods: [
                        Func {
                            name: "f",
                            params: Params {
                                has_self: false,
                                pos: [
                                    (
                                        "v",
                                        None,
                                    ),
                                ],
                                argv: None,
                                kw: [],
                                kwargs: None,
                            },
                            body: [
                                Pass,
                            ],
                            has_yield: false,
                        },
                    ],
                    meta: [],
                },
            },
        ),
        Class(
            Class {
                name: "T",
                parent: Some(
                    "U",
                ),
                members: ClassMembers {
                    fields: [],
                    methods: [],
                    meta: [],
                },
            },
        ),
        Class(
            Class {
                name: "T",
                parent: Some(
                    "U",
                ),
                members: ClassMembers {
                    fields: [],
                    methods: [],
                    meta: [],
                },
            },
        ),
        Class(
            Class {
                name: "T",
                parent: Some(
                    "U",
                ),
                members: ClassMembers {
                    fields: [
                        Field {
                            name: "a",
                            default: Some(
                                GetVar(
                                    GetVar {
                                        name: "b",
                                    },
                                ),
                            ),
                        },
                    ],
                    methods: [],
                    meta: [],
                },
            },
        ),
        Class(
            Class {
                name: "T",
                parent: Some(
                    "U",
                ),
                members: ClassMembers {
                    fields: [
                        Field {
                            name: "a",
                            default: Some(
                                GetVar(
                                    GetVar {
                                        name: "b",
                                    },
                                ),
                            ),
                        },
                    ],
                    methods: [
                        Func {
                            name: "f",
                            params: Params {
                                has_self: false,
                                pos: [
                                    (
                                        "v",
                                        None,
                                    ),
                                ],
                                argv: None,
                                kw: [],
                                kwargs: None,
                            },
                            body: [
                                Pass,
                            ],
                            has_yield: false,
                        },
                    ],
                    meta: [],
                },
            },
        ),
        Class(
            Class {
                name: "T",
                parent: Some(
                    "U",
                ),
                members: ClassMembers {
                    fields: [
                        Field {
                            name: "a",
                            default: Some(
                                GetVar(
                                    GetVar {
                                        name: "b",
                                    },
                                ),
                            ),
                        },
                    ],
                    methods: [
                        Func {
                            name: "f",
                            params: Params {
                                has_self: false,
                                pos: [
                                    (
                                        "v",
                                        None,
                                    ),
                                ],
                                argv: None,
                                kw: [],
                                kwargs: None,
                            },
                            body: [
                                Pass,
                            ],
                            has_yield: false,
                        },
                    ],
                    meta: [],
                },
            },
        ),
        Class(
            Class {
                name: "T",
                parent: None,
                members: ClassMembers {
                    fields: [
                        Field {
                            name: "a",
                            default: None,
                        },
                    ],
                    methods: [],
                    meta: [],
                },
            },
        ),
        Class(
            Class {
                name: "T",
                parent: Some(
                    "U",
                ),
                members: ClassMembers {
                    fields: [
                        Field {
                            name: "a",
                            default: None,
                        },
                    ],
                    methods: [],
                    meta: [],
                },
            },
        ),
    ],
}
