crates/syntax/src/parser/snapshots/hebi_syntax__parser__tests__ctrl_stmt-2.snap
---
source: crates/syntax/src/parser/tests.rs
expression: errors
---
[31merror[0m: return outside of function
[34m>[0m code:1
[34m|[0m 
[34m|[0m [31;4mreturn[0m v
[34m|[0m 


