crates/syntax/src/parser/snapshots/hebi_syntax__parser__tests__ctrl_stmt-3.snap
---
source: crates/syntax/src/parser/tests.rs
expression: errors
---
[31merror[0m: yield outside of function
[34m>[0m code:1
[34m|[0m 
[34m|[0m [31;4myield[0m v
[34m|[0m 


